--- a/playbooks/roles/veda_web_frontend/meta/main.yml
+++ b/playbooks/roles/veda_web_frontend/meta/main.yml
@@ -1,4 +1,46 @@
 ---
-
+#
+# edX Configuration
+#
+# github:     https://github.com/edx/configuration
+# wiki:       https://openedx.atlassian.net/wiki/display/OpenOPS
+# code style: https://openedx.atlassian.net/wiki/display/OpenOPS/Ansible+Code+Conventions
+# license:    https://github.com/edx/configuration/blob/master/LICENSE.TXT
+#
+##
+# Role includes for role veda_web_frontend
+#
 dependencies:
-  - video_pipeline_base
+  - role: video_pipeline_base
+  - role: edx_django_service
+    edx_django_service_repo: 'edx-video-pipeline'
+    edx_django_service_version: '{{ VIDEO_PIPELINE_BASE_VERSION }}'
+    edx_django_service_name: '{{ veda_web_frontend_service_name }}'
+    edx_django_service_user: '{{ veda_web_frontend_user }}'
+    edx_django_service_home: '{{ COMMON_APP_DIR }}/{{ veda_web_frontend_service_name }}'
+    edx_django_service_debian_pkgs_extra: '{{ veda_web_frontend_debian_pkgs }}'
+    edx_django_service_gunicorn_port: '{{ video_pipeline_base_gunicorn_port }}'
+    edx_django_service_django_settings_module: '{{ VEDA_WEB_FRONTEND_DJANGO_SETTINGS_MODULE }}'
+    edx_django_service_environment_extra: '{{ VEDA_WEB_FRONTEND_ENVIRONMENT }}'
+    edx_django_service_gunicorn_extra: '{{ VEDA_WEB_FRONTEND_GUNICORN_EXTRA }}'
+    edx_django_service_wsgi_name: 'VEDA'
+    edx_django_service_nginx_port: '{{ VIDEO_PIPELINE_BASE_NGINX_PORT }}'
+    edx_django_service_ssl_nginx_port: '{{ VIDEO_PIPELINE_BASE_SSL_NGINX_PORT }}'
+    edx_django_service_language_code: '{{ VIDEO_PIPELINE_BASE_LANGUAGE_CODE }}'
+    edx_django_service_secret_key: '{{ VIDEO_PIPELINE_BASE_SECRET_KEY }}'
+    edx_django_service_staticfiles_storage: '{{ VEDA_WEB_FRONTEND_STATICFILES_STORAGE }}'
+    edx_django_service_media_storage_backend: '{{ VEDA_WEB_FRONTEND_MEDIA_STORAGE_BACKEND }}'
+    edx_django_service_memcache: '{{ VEDA_WEB_FRONTEND_MEMCACHE }}'
+    edx_django_service_default_db_host: '{{ VIDEO_PIPELINE_BASE_MYSQL_HOST }}'
+    edx_django_service_default_db_name: '{{ VIDEO_PIPELINE_BASE_DEFAULT_DB_NAME }}'
+    edx_django_service_db_user: '{{ VIDEO_PIPELINE_BASE_MYSQL_USER }}'
+    edx_django_service_db_password: '{{ VIDEO_PIPELINE_BASE_MYSQL_PASSWORD }}'
+    edx_django_service_default_db_atomic_requests: false
+    edx_django_service_social_auth_edx_oidc_key: '{{ VIDEO_PIPELINE_BAS_SOCIAL_AUTH_EDX_OIDC_KEY }}'
+    edx_django_service_social_auth_edx_oidc_secret: '{{ VIDEO_PIPELINE_BAS_SOCIAL_AUTH_EDX_OIDC_SECRET }}'
+    edx_django_service_social_auth_redirect_is_https: '{{ VIDEO_PIPELINE_BAS_SOCIAL_AUTH_REDIRECT_IS_HTTPS }}'
+    edx_django_service_extra_apps: '{{ VEDA_WEB_FRONTEND_EXTRA_APPS }}'
+    edx_django_service_automated_users: '{{ VEDA_WEB_FRONTEND_AUTOMATED_USERS }}'
+    edx_django_service_use_python3: false
+    edx_django_service_config: '{{ VIDEO_PIPELINE_BASE_CONFIG }}'
+    video_pipeline_base_service_name: '{{ veda_web_frontend_service_name }}'
