Add support for non amqp celery transport

--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -292,6 +292,7 @@ EDXAPP_LOGGING_ENV:  'sandbox'
 
 EDXAPP_SYSLOG_SERVER: ""
 EDXAPP_RABBIT_HOSTNAME: 'localhost'
+EDXAPP_BROKER_TRANSPORT: 'amqp'
 
 EDXAPP_LMS_NGINX_PORT: 18000
 EDXAPP_LMS_SSL_NGINX_PORT: 48000
@@ -1084,7 +1085,7 @@ generic_env_config:  &edxapp_generic_env
       LOCATION: "{{ EDXAPP_CACHE_COURSE_STRUCTURE_MEMCACHE }}"
       # Default to two hours
       TIMEOUT: "7200"
-  CELERY_BROKER_TRANSPORT: 'amqp'
+  CELERY_BROKER_TRANSPORT: "{{ EDXAPP_BROKER_TRANSPORT }}"
   CELERY_BROKER_HOSTNAME: "{{ EDXAPP_RABBIT_HOSTNAME }}"
   COMMENTS_SERVICE_URL: "{{ EDXAPP_COMMENTS_SERVICE_URL }}"
   LOGGING_ENV: "{{ EDXAPP_LOGGING_ENV }}"
